# WebNowPlaying-CLI

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  build-msvc.ps1  build.ps1  build.sh  default.nix  flake.nix  package.bat  package.sh
.github/workflows/: release.yml
src/: cargs.h  daemon.c  thread.h  wnp.h  wnpcli.c  wnpcli.h
